@@ -1,3 +1,9 @@
+2024-10-20  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* aleph-{ofm,lmr}.test, tests/lmr1.tex,
+	tests/al-ofm.tex, tests/al-lmr1.log, tests/al-ofm.log,
+	tests/inutf8.ocp, am/aleph.am: Add tests for OFM.
+
 2024-03-10  Karl Berry  <karl@tug.org>
 
 	* TL'24 release.
